source/assets/stylesheets/pages/family-journey/_family-journey-tbd.scss
.family-journey-tbd {
  @include media-breakpoint-up(xs) {
    padding: 1rem 1rem 0 1rem;
  }

  @include media-breakpoint-up(sm) {
    padding: 1rem 1rem 5rem 1rem;
  }

  @include media-breakpoint-up(lg) {
    padding: 1rem 1rem 2rem 1rem;

    .skyline {
      text-align: center;
      font-size: 10rem;
    }
  }

  embed {
    margin-left: auto;
    margin-right: auto;

    @include media-breakpoint-up(xs) {
      max-height: 400px;
    }

    @include media-breakpoint-up(sm) {
      max-height: 500px;
    }
  }
}

